Fix layout on mobile

--- a/src/app/views/layout.less
+++ b/src/app/views/layout.less
@@ -23,8 +23,6 @@
 }
 
 #dashboard {
-  margin-left: @menu-left-width;
-
   .container {
     position: relative;
   }
@@ -35,6 +33,7 @@
 
   /* Fix the container width if the screen is sm+ */
   @media screen and (min-width: @screen-sm-min) {
+    margin-left: @menu-left-width;
     .container {
       width: @container-sm - @menu-left-width;
     }
@@ -42,6 +41,7 @@
 
   /* Fix the container width if the screen is md+ */
   @media screen and (min-width: @screen-md-min) {
+    margin-left: @menu-left-width;
     .container {
       width: @container-md - @menu-left-width;
     }
@@ -49,6 +49,7 @@
 
   /* Fix the container width if the screen is lg+ */
   @media screen and (min-width: @screen-lg-min) {
+    margin-left: @menu-left-width;
     .container {
       width: @container-lg - @menu-left-width;
     }
